<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <!-- Contenedor para el fondo -->
    <FrameLayout
        android:id="@+id/backgroundContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <!--Imagen relacionada con el tema-->
        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="569dp"
            android:layout_height="791dp"
            android:alpha="0.35"
            android:gravity="top"
            android:scaleType="centerCrop"
            android:src="@drawable/mapa"
            android:translationY="-60dp" />
    </FrameLayout>

    <!-- Nombre de la app -->
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/celtica_bold"
        android:textColor="@color/boton"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <!-- Mi nombre -->
    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="@color/texto"
        android:background="@color/fondText"
        android:fontFamily="@font/celtica_bold"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Descripcion -->
    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textColor="@color/texto"
        android:fontFamily="@font/celtica_bold"
        android:background="@color/fondText"
        android:padding="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/btnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="40dp" />

    <!-- Boton de inicio -->
    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/boton"
        android:backgroundTint="@color/boton"
        android:textColor="@android:color/white"
        android:fontFamily="@font/celtica_bold"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>